[package]
name = "zh_open_data"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
anyhow = "1.0"
once_cell = "1.8.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
urlencoding = "2.1.0"

[dev-dependencies]
rusty-hook = "^0.11.2"

[build-dependencies]